src/objects/Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Outstanding__c</fullName>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BookingKey__c</fullName>
        <label>BookingKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Date__c</fullName>
        <label>Claim Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Payment Plan</relationshipLabel>
        <relationshipName>Payment_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DirectDebit_Key__c</fullName>
        <label>DirectDebit Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Debit</label>
        <referenceTo>Direct_Debits__c</referenceTo>
        <relationshipLabel>Payment Plan</relationshipLabel>
        <relationshipName>Payment_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Key__c</fullName>
        <label>Membership Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Payment Plan</relationshipLabel>
        <relationshipName>Payment_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Identifier__c</fullName>
        <label>Parent Record Identifier</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentPlan_Key__c</fullName>
        <label>PaymentPlan Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Payment Plan</relationshipLabel>
        <relationshipName>Payment_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Payment_Number__c</fullName>
        <label>Scheduled Payment Number</label>
        <precision>11</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Claim_Date__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Amount_Outstanding__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>